--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -23,7 +23,7 @@ The project got inspired by the [KNoC](https://github.com/CARV-ICS-FORTH/knoc) a
 
 ## Quick-start
 
-Let's discover [**interLink in less than 5 minutes**](./category/guides).
+Let's discover [**interLink in less than 5 minutes**](./category/usage).
 
 You need only a machine with [Docker](https://docs.docker.com/engine/install/) engine and git CLI installed.
 
